# osemgrep

./: .codemapignore  .dockerignore  .gitattributes  .gitignore  .gitmodules  .semgrepignore  CHANGELOG.md  CLAUDE.md  Dockerfile  Dockerfile.libs  Makefile  README.md  changelog-old.txt  changes.org  changes.txt  configure  copyright.txt  debug  dune  dune-project  menhir-wrapper  osemgrep.opam  readme.md  semgrep.jsonnet  semgrep.opam
.claude/: settings.local.json
.github/workflows/: build-test-javascript.yml  docker.yml  semgrep.yml
interfaces/: Language.ml  Language.mli  README.md  generate.py  lang.json
interfaces/semgrep_interfaces/: lang.json
js/engine/: Main.ml
js/languages/hack/: Makefile
js/languages/shared/: Makefile.include
js/languages/vue/: Makefile
js/tests/: Test_jsoo.ml  index.test.js
scripts/: run-core-test
src/analyzing/: AST_to_IL.ml  Dataflow_when.ml  Dataflow_when.mli  dune
src/analyzing/tests/: dune
src/configuring/: Limits_semgrep.ml  dune
src/core/: Core_hooks.ml  Core_hooks.mli  Test_tags.ml  Version.ml  dune
src/core_cli/: Core_CLI.ml  Core_actions.ml  Core_exit_code.ml  Core_exit_code.mli  dune
src/core_scan/: Core_scan.ml  Core_scan.mli  Core_scan_config.ml  dune
src/engine/: dune
src/engine/tests/: Test_engine.ml  Unit_engine.ml  dune
src/fixing/: dune
src/fixing/tests/: dune
src/il/: dune
src/lsp/scan_helpers/: Scan_helpers.ml
src/lsp_client/: LSP_c.ml  LSP_c.mli  LSP_client.ml  LSP_client.mli  LSP_csharp.ml  LSP_go.ml  LSP_go.mli  LSP_java.ml  LSP_lang.ml  LSP_ocaml.ml  LSP_ocaml.mli  LSP_php.ml  LSP_python.ml  LSP_python.mli  LSP_rust.ml  LSP_rust.mli  LSP_scala.ml  LSP_typescript.ml  LSP_typescript.mli  dune
src/lsp_server/: Test_LS_e2e_ml
src/lsp_server/server/: Session.ml  User_settings.ml
src/main/: Main.ml  dune  flags.sh
src/matching/: Matching_generic.ml  Pattern_vs_code.ml  SubAST_generic.ml  dune
src/metachecking/: Check_rule.ml  Test_metachecking.ml  Translate_rule.ml  dune
src/naming/: dune
src/optimizing/: dune
src/osemgrep/cli/: CLI.ml  CLI.mli  Help.ml  Help.mli  dune
src/osemgrep/cli_ci/: Ci_CLI.ml  Ci_subcommand.ml  dune
src/osemgrep/cli_install_ci/: Install_ci_subcommand.ml  dune
src/osemgrep/cli_install_semgrep_pro/: Install_semgrep_pro_subcommand.ml  dune
src/osemgrep/cli_interactive/: Interactive_CLI.ml  Interactive_subcommand.ml  Interactive_subcommand.mli  dune
src/osemgrep/cli_login/: Logout_subcommand.ml  dune
src/osemgrep/cli_lsp/: dune
src/osemgrep/cli_publish/: Publish_subcommand.ml  Publish_subcommand.mli  Test_publish_subcommand.ml  Test_publish_subcommand.mli  dune
src/osemgrep/cli_scan/: Diff_scan.ml  Diff_scan.mli  Scan_CLI.ml  Scan_CLI.mli  Scan_subcommand.ml  Scan_subcommand.mli  dune
src/osemgrep/cli_show/: Show_CLI.ml  Show_CLI.mli  Show_subcommand.ml  Test_show_subcommand.ml  dune
src/osemgrep/cli_test/: Test_subcommand.ml  Test_subcommand.mli  dune
src/osemgrep/cli_validate/: Validate_subcommand.ml  dune
src/osemgrep/configuring/: dune
src/osemgrep/core/: Auth.ml  Auth.mli  Metrics_.ml  Pysemgrep.ml  dune
src/osemgrep/core_runner/: Core_runner.ml  Core_runner.mli
src/osemgrep/networking/: Rule_fetching.ml  Rule_fetching.mli  dune
src/osemgrep/reporting/: Cli_json_output.ml  Output.ml  Text_reports.ml  dune
src/osemgrep/tests/: Test_osemgrep.ml  dune
src/parsing/: Check_pattern.ml  Parse_metavariable_type.ml  Parse_rule.ml  Parse_rules_with_atd.ml  Parse_with_caching.ml  Parsing_plugin.ml  Parsing_plugin.mli  Rule_file.ml  Unit_parsing.ml  dune
src/parsing/tests/: Test_parsing.ml  dune
src/parsing_languages/: Parse_pattern2.ml  Parse_target2.ml  dune
src/printing/: Pretty_print_AST.ml  dune
src/printing/tests/: dune
src/reporting/: Core_text_output.ml  dune
src/rpc/: dune
src/rule/: Lang.ml  Lang.mli  dune  rule_schema_v2.atd  rule_schema_v2_adapter.ml  semgrep_output_v1.atd
src/sca/: dune
src/tainting/: dune
src/targeting/: Find_targets.ml  Guess_lang.ml  Semgrepignore.ml  Targeting_stat.ml  Targeting_stat.mli  dune
src/tests/: Test.ml  dune
src/typing/: LSP_client.ml  LSP_client.mli  Typing.ml  dune
tests/lsp/c/: README  lib.c  lib.h  main.c
tests/lsp/cpp/: README  main.cpp  math_utils.cpp  math_utils.h
tests/lsp/csharp/: Lib.cs  Main.cs  README  test.sln
tests/lsp/go/: README  go.mod  lib.go  main.go
tests/lsp/haskell/: Lib.hs  Main.hs  README  lsp-test.cabal
tests/lsp/java/: Lib.java  Main.java  README  pom.xml
tests/lsp/ocaml/: README  dune  lib.ml  lib.mli  main.ml
tests/lsp/php/: Lib.php  Main.php  README
tests/lsp/python/: README  lib.py  main.py  pyproject.toml
tests/lsp/rust/: Cargo.toml  README
tests/lsp/rust/src/: lib.rs  main.rs
tests/lsp/scala/: Lib.scala  Main.scala  README  build.sbt
tests/lsp/typescript/: README  lib.ts  main.ts  package.json
tests/parsing/haskell/: basic.hs
tests/parsing/zig/: README.txt  async_and_suspend.zig  builtins.zig  comptime.zig  control_flow.zig  error_handling.zig  hello_world.zig  testing.zig  types.zig
tests/patterns/haskell/: class_decl.TODO  class_decl.sgrep  concrete_type_sig.hs  concrete_type_sig.sgrep  data_decl.hs  data_decl.sgrep  import_concrete.hs  import_qualified.hs  import_qualified.sgrep  metavar_equality.TODO  metavar_equality.sgrep  metavar_funcdef.TODO  metavar_funcdef.sgrep  newtype_decl.TODO  newtype_decl.sgrep  simple_funcdef.TODO  simple_funcdef.sgrep  type_alias.hs  type_alias.sgrep  type_sig.hs  type_sig.sgrep
tests/patterns/php/: metavar_typed.php  metavar_typed.sgrep
tests/snapshots/semgrep-core/745a04125f26/: stdout
tests/snapshots/semgrep-core/bc2f173cbf29/: stdxxx
tools/: hello_script.ml
tools/ojsonnet/: dune
tools/otarzan/lib/: dune
