(library
 (public_name semgrep.lsp_client)
 (name semgrep_lsp_client)
 (wrapped false)
 (libraries
   ppx_deriving.runtime

   commons
   lib_parsing

   semgrep_core

   lsp
   jsonrpc
   str
   parser_ocaml.ast
   parser_ocaml.menhir
   parser_ocaml.ast_generic
   parser_c.ast
   parser_c.menhir
   parser_c.ast_generic
   parser_go.ast
   parser_go.menhir
   parser_go.ast_generic
   parser_rust.ast_generic
   parser_python.ast
   parser_python.menhir
   parser_python.ast_generic
   parser_typescript.tree_sitter
   parser_javascript.menhir
   parser_javascript.ast_generic
   parser_java.ast
   parser_java.menhir
   parser_java.ast_generic
   parser_csharp.ast_generic
   parser_scala.recursive_descent
   parser_scala.ast_generic
   parser_php.menhir
   parser_php.ast_generic
 )
 (preprocess (pps ppx_deriving.show ppx_profiling))
)
