(library
 (public_name semgrep.lsp_client)
 (name semgrep_lsp_client)
 (wrapped false)
 (libraries
   ppx_deriving.runtime

   commons
   parsing_core

   semgrep_core
   languages

   lsp
   jsonrpc
   str
   parser_ocaml.lsp
   parser_c.lsp
   parser_go.lsp
   parser_rust.lsp
   parser_python.lsp
   parser_typescript.lsp
   parser_java.lsp
   parser_csharp.lsp
   parser_scala.lsp
   parser_php.lsp
   parser_haskell.lsp
 )
 (preprocess (pps ppx_deriving.show profiling.ppx))
)
