(library
 (public_name semgrep.matching)
 (name semgrep_matching)
 (wrapped false)
 (libraries
   yaml ppx_deriving.runtime re

   commons
   parsing_core
   dataflow_generic
   naming_generic
   parser_javascript.ast ; for Ast_js.default_entity

   semgrep_core
   semgrep_typing
   semgrep_optimizing
   ; No dependencies to semgrep_parsing here!
   ; we use parsers in Unit_matcher.ml but they are passed in
   ; via a parameter in tests().
 )
 (preprocess (pps ppx_deriving.show profiling.ppx))
; restore once can compile semgrep with working ppxlib and
; bisect_ppx together
; (instrumentation (backend bisect_ppx))
)
