(library
 (public_name semgrep.typing)
 (name semgrep_typing)
 (wrapped false)
 (libraries
   ppx_deriving.runtime

   commons
   parsing_core

   pfff_lang_GENERIC_naming
   semgrep_core

   ; No dependencies to semgrep_parsing here!
   ; we use parsers in Unit_matcher.ml but they are passed in
   ; via a parameter in tests().
 )
 (preprocess (pps ppx_deriving.show profiling.ppx))
; restore once can compile semgrep with working ppxlib and
; bisect_ppx together
; (instrumentation (backend bisect_ppx))
)
