cabal-version: 2.4
name:          lsp-test
version:       0.1.0.0
build-type:    Simple

library
  exposed-modules: Lib
  build-depends:   base
  hs-source-dirs:  .
  default-language: Haskell2010

executable main
  main-is:         Main.hs
  build-depends:   base, lsp-test
  hs-source-dirs:  .
  default-language: Haskell2010
